# adkagents-dynamic-skills

./: README.md  pyproject.toml
samples/: README.md
samples/adk1_sample/: run_sample.py
samples/adk2_sample/: run_sample.py
samples/mock_skills/weather-skill/: SKILL.md
src/adk_progressive_skills/: __init__.py  discovery.py  patch.py
tests/: test_patch.py
