[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adk-progressive-skills"
version = "0.1.1"
description = "Automated progressive skill discovery and agent patching for ADK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "google-adk>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adk_progressive_skills"]
